--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DangleData - NHL Player Line Tracker (Protected)</title>
+    <title>DangleData</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎯</text></svg>">
     <style>
         * {
@@ -273,7 +273,6 @@
                 <span id="darkModeIcon">🌙</span> Dark Mode
             </button>
         </div>
-        <p class="subtitle">NHL Player Line Tracker - Protected Backend Edition</p>
         
         <div class="controls">
             <div class="control-group">
