--- a/public/index.html
+++ b/public/index.html
@@ -790,7 +790,7 @@
     </div>
 
     <script>
-        const API_BASE_URL = 'https://nhl-player-tracker.vercel.app';
+        // API_BASE_URL is now defined in config.js
         
         let allPlayersData = [];
         let allGoaliesData = [];
