--- a/public/index.html
+++ b/public/index.html
@@ -249,6 +249,7 @@
             justify-content: space-between;
             align-items: flex-start;
             margin-bottom: 5px;
+            min-height: 110px;
         }
         
         .player-name {
